# OpenGL-Pathtracer

./: CMakeLists.txt  README.md
include/: camera.h  shader.h
include/glad/: glad.h
shaders/: fragment.fs  vertex.vs
src/: glad.c  main.cpp
